--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,42 @@
 html {
-	background: red;
+	background: orange;
+}
+#blocpage {
+padding: 100px;
+width: 900px;
+margin: auto;
+}
+
+h1 {
+border-radius: 10px;
+background-color: green;
+text-align: center;
+}
+
+a{
+background-color: white;
+border-radius: 10px;
+}
+
+header {
+border-radius: 10px;
+margin: 50px;
+margin-top: auto;
+background-color: red;
+text-align: center;
+}
+
+nav {
+border-radius: 10px;
+color: white;
+text-align: center;
+background-color: blue;
+}
+
+section {
+border-radius: 10px;
+margin: 100px;
+margin-top: auto;
+
+background-color: white;
 }
